--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
+
         with:
           go-version: "1.16.8"
       - run: make build
@@ -20,3 +21,4 @@ jobs:
         with:
           go-version: "1.16.8"
       - run: make test
+      - name: Build and push
