--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -14,7 +14,7 @@ jobs:
           go-version: "1.16.8"
       - run: make build
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -22,3 +22,4 @@ jobs:
           go-version: "1.16.8"
       - run: make test
       - name: Build and push
+        uses: docker/build
